<!--
  SPDX-FileCopyrightText: 2023 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Datura Firewall</string>
    <string name="app_short_name">Firewall</string>

    <!-- AppList Fragment -->
    <string name="app_logo">App\'s logo</string>
    <string name="searchbar_hint">Search for apps</string>
    <string name="default_settings">Default settings</string>
    <string name="custom_settings">Custom settings</string>
    <string name="no_internet">App does not ask for internet permission</string>

    <string name="allow_background_data">Allow background network access</string>
    <string name="allow_wifi_data">Allow Wi-Fi data</string>
    <string name="allow_mobile_data">Allow mobile data</string>
    <string name="allow_vpn_data">Allow VPN data</string>
    <string name="allow_cleartext_data">Allow cleartext data</string>

    <string name="sort_by_last_used">Sort by last used</string>
    <string name="sort_by_name">Sort by name</string>

    <string name="installed_apps">Installed apps</string>
    <string name="system_apps">System apps</string>

    <!-- About Fragment -->
    <string name="about">About</string>
    <string name="about_summary">A firewall application using Android\'s internal network API.</string>
    <string name="about_foss">It is licensed and distributed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0 License</a>. See files for individual copyright holder\'s information.</string>
    <string name="version">Version: <xliff:g id="version">%1$s</xliff:g></string>
    <string name="contributors_title">Contributors</string>
    <string name="contributors_summary">Please see GitLab for a <a href="https://gitlab.com/CalyxOS/platform_external_calyx_datura/-/graphs/HEAD">list of contributors</a>.</string>
    <string name="contributing_orgs_title">Contributing Organizations</string>
    <string name="contributing_orgs_summary"><a href="https://www.calyxinstitute.org">Calyx Institute</a> for use in <a href="https://calyxos.org">CalyxOS</a></string>

    <!-- Work Fragment -->
    <string name="work_profile_help">Firewall settings for work apps are managed in your personal profile’s Firewall app. Work apps have a briefcase icon on them.</string>

    <!-- SettingsFragment -->
    <string name="settings">Settings</string>
    <string name="pref_default_internet_title">Allow internet for new installs</string>
    <string name="pref_default_internet_summary">New apps installs are allowed to access internet by default</string>
    <string name="notification_channel_fgs">Foreground service</string>
    <string name="notification_channel_alert">Alerts</string>
    <string name="monitoring_new_app_installs_title">Monitoring new app installs</string>
    <string name="monitoring_new_app_installs_desc">Firewall is now monitoring new app installs to deny internet access by default!</string>
    <string name="internet_access_denied_title">Internet access denied!</string>
    <string name="internet_access_denied_desc"><xliff:g id="app_name">%1$s</xliff:g> has no internet access. Do you want to allow it?</string>
    <string name="allow">Allow</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Notifications regarding internet access for new apps installs</string>
    <string name="cleartext_network_policy_title">Restrict cleartext network traffic</string>
    <string name="cleartext_network_policy_summary">Blocks all non-TLS network traffic. Requires Private DNS configuration. Note: Without explicit exemptions, apps that use cleartext traffic may not work</string>
</resources>
