<!--
  SPDX-FileCopyrightText: 2024 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:icon="@drawable/ic_install"
        app:key="PREFERENCE_DEFAULT_INTERNET"
        app:summary="@string/pref_default_internet_summary"
        app:title="@string/pref_default_internet_title" />

    <Preference
        app:key="PREFERENCE_NOTIFICATIONS"
        app:summary="@string/notifications_desc"
        app:icon="@drawable/ic_notifications"
        app:title="@string/notifications" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:icon="@drawable/ic_http"
        app:isPreferenceVisible="false"
        app:key="PREFERENCE_CLEARTEXT"
        app:summary="@string/cleartext_network_policy_summary"
        app:title="@string/cleartext_network_policy_title" />
</PreferenceScreen>
